[project]
name = "TikTokDownloader"
version = "5.6.beta"
description = "TikTok 发布/喜欢/合辑/直播/视频/图集/音乐；抖音发布/喜欢/收藏/收藏夹/视频/图集/实况/直播/音乐/合集/评论/账号/搜索/热榜数据采集工具"
authors = [
    { name = "JoeanAmier", email = "yonglelolu@foxmail.com" },
]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "emoji>=2.14.1",
    "gmssl>=3.2.2",
    "httpx[socks]>=0.28.1",
    "lxml>=5.3.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.10.6",
    "qrcode>=8.0",
    "rich>=13.9.4",
    "rookiepy>=0.5.6",
]

[project.urls]
Repository = "https://github.com/JoeanAmier/KS-Downloader"

[tool.uv.pip]
index-url = "https://pypi.org/simple"
